--- a/index.html
+++ b/index.html
@@ -51,16 +51,52 @@
             img: "Media/The Local Train.png"
         },
         {
+            src: "Media/Oo Sajni Ree.mp3",
+            title: "Oo Sajni Ree",
+            artist: "Arijit Singh",
+            img: "Media/Sajni Ree.webp"
+        },
+        {
+            src: "Media/Anuv Jain - HUSN (Lyrics).mp3",
+            title: "Husn",
+            artist: "Anuv Jain",
+            img: "Media/Husn.png"
+        },
+        {
             src: "Media/Main Kabhi Bhoolunga Na Tujhe  Saudebaazi ft.Aakrosh  [Lofi  Slowed  Reverb ] @latenightlofis.mp3",
             title: "Saudebaazi",
             artist: "Javed Ali Khan",
             img: "Media/Main kbhi bhulunga naa tujhe.png"
         },
         {
+            src: "Media/Ek Din Aap Yun [ Slowed  Reverb ]  90's songs.mp3",
+            title: "Ek Din App",
+            artist: "Kumar Sanu",
+            img: "Media/Ek Din App.png"
+        },
+        {
             src: "Media/Tum Se Hi (SlowedReverb) - @MohitChauhanOfficial   Lyrics  Jab We Met  MoonVibes.mp3",
             title: "Tum Se Hii",
             artist: "Mohit Chauhan",
             img: "Media/Tum Se Hii.png"
+        },
+        {
+            src: "Media/Luka Chuppi [SlowedReverb]-Rang De Basanti  Textaudio Lyrics.mp3",
+            title: "Luka Chuppi",
+            artist: "Lata Mangeshkar",
+            img: "Media/Luka Chuppi.png"
+        },
+        {
+            src: "Media/Iktara  - Wake Up Sid  [slowed  reverb].mp3",
+            title: "Iktara",
+            artist: "Kavita Seth",
+            img: "Media/Iktara.png"
+        },
+        {
+            src: "Media/Hawayein Lyric Video - Jab Harry Met Sejal Shah Rukh Khan, AnushkaArijit SinghPritam.mp3",
+            title: "Hawayein",
+            artist: "Arijit Singh",
+            img: "Media/Hawayein.png"
         },
         {
             src: "Media/Shayad Lyrics - Love Aaj Kal Ft. Arijit Singh  Kartik  Sara  Arushi  Pritam.mp3",
