--- a/index.html
+++ b/index.html
@@ -131,20 +131,24 @@
     function nextSong() {
         if (currentSongIndex < songs.length - 1) {
             currentSongIndex++;
-            loadSong(currentSongIndex);
-            song.play();
-            ctrlIcon.classList.add("fa-pause");
-            ctrlIcon.classList.remove("fa-play");
+        } else {
+            currentSongIndex = 0;
         }
+        loadSong(currentSongIndex);
+        song.play();
+        ctrlIcon.classList.add("fa-pause");
+        ctrlIcon.classList.remove("fa-play");
     }
     function prevSong() {
         if (currentSongIndex > 0) {
             currentSongIndex--;
-            loadSong(currentSongIndex);
-            song.play();
-            ctrlIcon.classList.add("fa-pause");
-            ctrlIcon.classList.remove("fa-play");
+        } else {
+            currentSongIndex = songs.length - 1;
         }
+        loadSong(currentSongIndex);
+        song.play();
+        ctrlIcon.classList.add("fa-pause");
+        ctrlIcon.classList.remove("fa-play");
     }
     song.onloadedmetadata = function() {
         progress.max = song.duration;
