--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="music-player">
             <nav>
-                <div class="circle">
+                <div class="circle" onclick="prevSong()">
                     <i class="fa-solid fa-angle-left"></i>
                 </div>
                 <div class="circle">
@@ -107,7 +107,6 @@
     ];
     let currentSongIndex = localStorage.getItem('currentSongIndex') ? parseInt(localStorage.getItem('currentSongIndex')) : 0;
     let currentTime = localStorage.getItem('currentTime') ? parseFloat(localStorage.getItem('currentTime')) : 0;
-
     function loadSong(index) {
         const songData = songs[index];
         song.src = songData.src;
@@ -120,7 +119,6 @@
             song.currentTime = currentTime;
         };
     }
-
     function playPause() {
         if (ctrlIcon.classList.contains("fa-pause")) {
             song.pause();
@@ -132,7 +130,6 @@
             ctrlIcon.classList.remove("fa-play");
         }
     }
-
     function nextSong() {
         if (currentSongIndex < songs.length - 1) {
             currentSongIndex++;
@@ -144,24 +141,19 @@
         ctrlIcon.classList.add("fa-pause");
         ctrlIcon.classList.remove("fa-play");
     }
-
     function prevSong() {
         if (currentSongIndex > 0) {
             currentSongIndex--;
-        } else {
-            currentSongIndex = songs.length - 1;
+            loadSong(currentSongIndex);
+            song.play();
+            ctrlIcon.classList.add("fa-pause");
+            ctrlIcon.classList.remove("fa-play");
         }
-        loadSong(currentSongIndex);
-        song.play();
-        ctrlIcon.classList.add("fa-pause");
-        ctrlIcon.classList.remove("fa-play");
     }
-
     song.onloadedmetadata = function() {
         progress.max = song.duration;
         progress.value = song.currentTime;
     };
-
     song.addEventListener('ended', () => {
         if (currentSongIndex < songs.length - 1) {
             nextSong();
@@ -170,24 +162,20 @@
             ctrlIcon.classList.add("fa-play");
         }
     });
-
     setInterval(() => {
         progress.value = song.currentTime;
         localStorage.setItem('currentTime', song.currentTime);
     }, 500);
-
     progress.onchange = function() {
         song.play();
         song.currentTime = progress.value;
         ctrlIcon.classList.add("fa-pause");
         ctrlIcon.classList.remove("fa-play");
     };
-
     window.addEventListener('beforeunload', () => {
         localStorage.setItem('currentSongIndex', currentSongIndex);
         localStorage.setItem('currentTime', song.currentTime);
     });
-
     loadSong(currentSongIndex);
     </script>
 </body>
